build/generated-src/antlr/main/com/alloyprofiling/ALLOYParser.java
// Generated from com\alloyprofiling\ALLOY.g4 by ANTLR 4.7.1

 package com.alloyprofiling;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ALLOYParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		DIGIT=81, ID=82, ALPHA=83, WS=84, COMMENT=85, LINE_COMMENT=86, STRING=87;
	public static final int
		RULE_specification = 0, RULE_param_module = 1, RULE_module = 2, RULE_names_opt = 3, 
		RULE_as_name_opt = 4, RULE_para_open = 5, RULE_open = 6, RULE_macro_expr = 7, 
		RULE_macro = 8, RULE_paragraph = 9, RULE_factDecl = 10, RULE_name_opt = 11, 
		RULE_assertDecl = 12, RULE_nameID = 13, RULE_decls_f = 14, RULE_funExpr = 15, 
		RULE_funDecl = 16, RULE_nameOrBlock = 17, RULE_name_cmd_opt = 18, RULE_scope_opt = 19, 
		RULE_run_or_check = 20, RULE_cmdDecl = 21, RULE_paraDecls = 22, RULE_paraDecls_opt = 23, 
		RULE_predDecl = 24, RULE_typescopes = 25, RULE_but_typescopes = 26, RULE_expect_digit = 27, 
		RULE_scope = 28, RULE_exactly_opt = 29, RULE_typescope = 30, RULE_decls = 31, 
		RULE_multiplicity = 32, RULE_abs = 33, RULE_priv = 34, RULE_abs_multiplicity = 35, 
		RULE_sigDecl = 36, RULE_names = 37, RULE_enumDecl = 38, RULE_mult = 39, 
		RULE_union = 40, RULE_superSet = 41, RULE_sigExt = 42, RULE_sigExtension = 43, 
		RULE_exprs = 44, RULE_notOp = 45, RULE_decls_e = 46, RULE_expr = 47, RULE_num = 48, 
		RULE_const_sets = 49, RULE_constant = 50, RULE_disjFunc = 51, RULE_disjoint = 52, 
		RULE_disj = 53, RULE_comma_opt = 54, RULE_decl = 55, RULE_letDecl = 56, 
		RULE_quant = 57, RULE_setCard = 58, RULE_tcOp = 59, RULE_unOp = 60, RULE_bit_shifter_operators = 61, 
		RULE_dotOp = 62, RULE_add = 63, RULE_sub = 64, RULE_binOp = 65, RULE_mult_or_set = 66, 
		RULE_arrowOp = 67, RULE_rel_operators = 68, RULE_compareOp = 69, RULE_block = 70, 
		RULE_block_opt = 71, RULE_blockOrBar = 72, RULE_bar = 73, RULE_name = 74, 
		RULE_number = 75;
	public static final String[] ruleNames = {
		"specification", "param_module", "module", "names_opt", "as_name_opt", 
		"para_open", "open", "macro_expr", "macro", "paragraph", "factDecl", "name_opt", 
		"assertDecl", "nameID", "decls_f", "funExpr", "funDecl", "nameOrBlock", 
		"name_cmd_opt", "scope_opt", "run_or_check", "cmdDecl", "paraDecls", "paraDecls_opt", 
		"predDecl", "typescopes", "but_typescopes", "expect_digit", "scope", "exactly_opt", 
		"typescope", "decls", "multiplicity", "abs", "priv", "abs_multiplicity", 
		"sigDecl", "names", "enumDecl", "mult", "union", "superSet", "sigExt", 
		"sigExtension", "exprs", "notOp", "decls_e", "expr", "num", "const_sets", 
		"constant", "disjFunc", "disjoint", "disj", "comma_opt", "decl", "letDecl", 
		"quant", "setCard", "tcOp", "unOp", "bit_shifter_operators", "dotOp", 
		"add", "sub", "binOp", "mult_or_set", "arrowOp", "rel_operators", "compareOp", 
		"block", "block_opt", "blockOrBar", "bar", "name", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "'exactly'", "','", "']'", "'module'", "'as'", "'open'", 
		"'='", "'{'", "'}'", "'let'", "'fact'", "'assert'", "'.'", "'fun'", "':'", 
		"'run'", "'check'", "'('", "')'", "'private'", "'pred'", "'but'", "'expect'", 
		"'for'", "'seq'", "'int'", "'abstract'", "'sig'", "'enum'", "'lone'", 
		"'one'", "'some'", "'+'", "'extends'", "'in'", "'!'", "'not'", "'=>'", 
		"'implies'", "'else'", "'sum'", "'seq/Int'", "'@'", "'this'", "'-'", "'none'", 
		"'univ'", "'iden'", "'disj'", "'disjoint'", "'all'", "'no'", "'#'", "'*'", 
		"'^'", "'set'", "'~'", "'<<'", "'>>'", "'>>>'", "'||'", "'or'", "'&&'", 
		"'and'", "'<=>'", "'iff'", "'&'", "'++'", "'<:'", "':>'", "'->'", "'<'", 
		"'>'", "'=<'", "'>='", "'<='", "'|'", "'this/'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "DIGIT", "ID", "ALPHA", 
		"WS", "COMMENT", "LINE_COMMENT", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ALLOY.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ALLOYParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpecificationContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ALLOYParser.EOF, 0); }
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<OpenContext> open() {
			return getRuleContexts(OpenContext.class);
		}
		public OpenContext open(int i) {
			return getRuleContext(OpenContext.class,i);
		}
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitSpecification(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			int _alt;
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(152);
					module();
					}
					break;
				}
				setState(158);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(155);
						open();
						}
						} 
					}
					setState(160);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(161);
					module();
					}
				}

				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32))) != 0) || _la==T__78 || _la==ID) {
					{
					{
					setState(164);
					paragraph();
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(170);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_moduleContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public Param_moduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterParam_module(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitParam_module(this);
		}
	}

	public final Param_moduleContext param_module() throws RecognitionException {
		Param_moduleContext _localctx = new Param_moduleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_param_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(174);
				match(T__0);
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(175);
					match(T__1);
					}
				}

				setState(178);
				name();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(179);
					match(T__2);
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(180);
						match(T__1);
						}
					}

					setState(183);
					name();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Param_moduleContext param_module() {
			return getRuleContext(Param_moduleContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(T__4);
			setState(194);
			name();
			setState(195);
			param_module();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Names_optContext extends ParserRuleContext {
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public Names_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_names_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterNames_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitNames_opt(this);
		}
	}

	public final Names_optContext names_opt() throws RecognitionException {
		Names_optContext _localctx = new Names_optContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_names_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__78 || _la==ID) {
				{
				setState(197);
				names();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class As_name_optContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public As_name_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_as_name_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterAs_name_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitAs_name_opt(this);
		}
	}

	public final As_name_optContext as_name_opt() throws RecognitionException {
		As_name_optContext _localctx = new As_name_optContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_as_name_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(200);
				match(T__5);
				setState(201);
				name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Para_openContext extends ParserRuleContext {
		public Names_optContext names_opt() {
			return getRuleContext(Names_optContext.class,0);
		}
		public Para_openContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterPara_open(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitPara_open(this);
		}
	}

	public final Para_openContext para_open() throws RecognitionException {
		Para_openContext _localctx = new Para_openContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_para_open);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(204);
				match(T__0);
				setState(205);
				names_opt();
				setState(206);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenContext extends ParserRuleContext {
		public PrivContext priv() {
			return getRuleContext(PrivContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Para_openContext para_open() {
			return getRuleContext(Para_openContext.class,0);
		}
		public As_name_optContext as_name_opt() {
			return getRuleContext(As_name_optContext.class,0);
		}
		public OpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterOpen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitOpen(this);
		}
	}

	public final OpenContext open() throws RecognitionException {
		OpenContext _localctx = new OpenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_open);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			priv();
			setState(211);
			match(T__6);
			setState(212);
			name();
			setState(213);
			para_open();
			setState(214);
			as_name_opt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_exprContext extends ParserRuleContext {
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Macro_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterMacro_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitMacro_expr(this);
		}
	}

	public final Macro_exprContext macro_expr() throws RecognitionException {
		Macro_exprContext _localctx = new Macro_exprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_macro_expr);
		int _la;
		try {
			setState(235);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(216);
					match(T__7);
					}
				}

				setState(219);
				match(T__8);
				setState(227);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(223);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__10) | (1L << T__18) | (1L << T__25) | (1L << T__26) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__36) | (1L << T__37) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57))) != 0) || ((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & ((1L << (T__78 - 79)) | (1L << (DIGIT - 79)) | (1L << (ID - 79)) | (1L << (STRING - 79)))) != 0)) {
						{
						{
						setState(220);
						expr(0);
						}
						}
						setState(225);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					setState(226);
					decls();
					}
					break;
				}
				setState(229);
				match(T__9);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(230);
				match(T__7);
				setState(233);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(231);
					expr(0);
					}
					break;
				case 2:
					{
					setState(232);
					decls();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Macro_exprContext macro_expr() {
			return getRuleContext(Macro_exprContext.class,0);
		}
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitMacro(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_macro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(237);
			match(T__10);
			setState(238);
			name();
			setState(243);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(239);
				match(T__0);
				setState(240);
				names();
				setState(241);
				match(T__3);
				}
			}

			setState(245);
			macro_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParagraphContext extends ParserRuleContext {
		public FactDeclContext factDecl() {
			return getRuleContext(FactDeclContext.class,0);
		}
		public AssertDeclContext assertDecl() {
			return getRuleContext(AssertDeclContext.class,0);
		}
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public CmdDeclContext cmdDecl() {
			return getRuleContext(CmdDeclContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public SigDeclContext sigDecl() {
			return getRuleContext(SigDeclContext.class,0);
		}
		public PredDeclContext predDecl() {
			return getRuleContext(PredDeclContext.class,0);
		}
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitParagraph(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_paragraph);
		try {
			setState(255);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(247);
				factDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(248);
				assertDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(249);
				funDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(250);
				cmdDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(251);
				enumDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(252);
				sigDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(253);
				predDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(254);
				macro();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactDeclContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public FactDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).enterFactDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ALLOYListener ) ((ALLOYListener)listener).exitFactDecl(this);
		}
	}

	public final FactDeclContext factDecl() throws RecognitionException {
		FactDeclContext _localctx = new FactDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_factDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(257);
			match(T__11);
			setState(259);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__78 || _la==ID) {
				{
				setState(258);
				name();
				}
			}

			setState(261);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
